[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
]

[project.scripts]
agent = "agent:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
